--- a/vuedongsan/package.json
+++ b/vuedongsan/package.json
@@ -32,7 +32,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-world-component-names": 0
+    }
   },
   "browserslist": [
     "> 1%",
