--- a/libray_apply/package.json
+++ b/libray_apply/package.json
@@ -2,13 +2,15 @@
   "name": "libray_apply",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev":  "concurrently \"json-server --watch db.json --port 3001\" \"vite\"",
     "build": "vite build",
     "preview": "vite preview",
+    "start": "json-server --watch db.json",
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "axios": "^1.7.2",
     "core-js": "^3.37.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
@@ -16,6 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
