--- a/libray_apply/package.json
+++ b/libray_apply/package.json
@@ -2,7 +2,7 @@
   "name": "libray_apply",
   "version": "0.0.0",
   "scripts": {
-    "dev":  "concurrently \"json-server --watch db.json --port 3001\" \"vite\"",
+    "dev": "concurrently \"json-server --watch db.json --port 3001\" \"vite\"",
     "build": "vite build",
     "preview": "vite preview",
     "start": "json-server --watch db.json",
@@ -12,9 +12,11 @@
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.2",
     "core-js": "^3.37.1",
+    "gridstack": "^10.3.0",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
-    "vuetify": "^3.6.12"
+    "vuetify": "^3.6.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
