--- a/Introduction/package.json
+++ b/Introduction/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "7.4.47",
     "axios": "^1.7.3",
     "core-js": "^3.37.1",
+    "lodash-es": "^4.17.21",
     "pinia": "^2.2.0",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
